Bug 130673 - LOOL: UI locks up after pressing backspace on a cell
Summary: LOOL: UI locks up after pressing backspace on a cell
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice Online
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Michael Meeks
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, regression
: 130797 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-02-14 18:42 UTC by Aron Budea
Modified: 2020-03-07 22:21 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2020-02-14 18:42:40 UTC
Backspace on a cell should open the Delete Contents dialog.

- In a spreadsheet, click on a cell (make sure you're not in cell edit mode) and press backspace.

=> Session locks up, clicking around or trying to enter data does nothing. Exiting the editing session keeps it running in the background.

This is a regression, traced back to the cp-6.2 backport of the following commit.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=80a1c69a30a55ed648a43976f6ab401ac2b5ceaa
author		Michael Meeks <michael.meeks@collabora.com>	2020-02-03 22:47:34 +0100
committer	Michael Meeks <michael.meeks@collabora.com>	2020-02-04 19:59:58 +0100

tdf#130382 - process key-event handlers synchronously for unipoll.
Comment 1 Michael Meeks 2020-02-14 18:57:23 UTC
patch in gerrit: https://gerrit.libreoffice.org/c/online/+/88741
Comment 2 Commit Notification 2020-02-14 22:34:24 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/online/commit/701cb6a230f3796964442560e057aa05dbe01a67

tdf#130673 - kill obsolete locking.
Comment 3 Aron Budea 2020-02-21 16:08:53 UTC
*** Bug 130797 has been marked as a duplicate of this bug. ***
Comment 4 Brylie Christopher Oxley 2020-03-07 19:13:55 UTC
Hello,
Has this fix been released yet? It is currently a show-stopper and causing data loss.

Kind regards,
Brylie
Comment 5 Michael Meeks 2020-03-07 19:21:51 UTC
Hi Brylie, what version of what are you using ? Help->About would really help there. Thanks ! =)
Comment 6 Brylie Christopher Oxley 2020-03-07 20:04:19 UTC
LOOLWSD 4.2.0 git hash b889fbb
served by: c5b41701

LOKit
Collabora Office 6.2-4 git hash: 01f0d42
Comment 7 Aron Budea 2020-03-07 22:21:13 UTC
(In reply to Brylie Christopher Oxley from comment #6)
> LOOLWSD 4.2.0 git hash b889fbb
> served by: c5b41701
That build is from 2020-02-06, and precedes the fix, which is from 2020-02-14.